<resources>
    <string name="app_name">Teleprompt</string>
    <string name="action_settings">Settings</string>


    <string name="q_begin">What do you want to do?</string>

    <string name="title_activity_video">Video</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


    <string name="loading_drive">Please wait while we get data from your Google Drive.</string>
    <string name="select_script">Select a script or create new</string>
    <string name="no_script">No scripts yet. Start by using the + button.</string>
    <string name="edit_save">You can edit and save your script here.</string>
    <string name="hint_title">Title</string>
    <string name="hint_data">Text Script</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="start_button">Start</string>
    <string name="video">Video</string>
    <string name="vid_intro">Record a video with text on the side.</string>
    <string name="text">Text</string>
    <string name="text_intro">Just text if you are recording from another device</string>
    <string name="recycler_vid">List of stored videos</string>
    <string name="no_video">No Videos Recorded Yet.</string>

    <!-- Descriptions -->
    <string name="drive_description">Waiting for Google Drive.</string>
    <string name="toolbar_description">toolbar</string>
    <string name="tabs_description">Tabs</string>
    <string name="ads_description">Google Admob Ad</string>
    <string name="select_script_description">Select a script</string>
    <string name="recycler_script_description">Various available scripts</string>
    <string name="fab_menu_description">Add Scripts</string>
    <string name="new_description">Create New Script</string>
    <string name="new_drive_description">Sync From google drive</string>
    <string name="cancel_button_description">Cancel Button</string>
    <string name="save_button_description">Save Button</string>
    <string name="start_button_description">Start Button</string>
    <string name="camera_description">Camera View</string>
    <string name="data_description">data</string>
    <string name="record_description">Record Button</string>
    <string name="start_vid_description">Start a Video</string>
    <string name="start_text_description">Start just with text</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="connection_error">Error Connecting</string>
    <string name="error">Error.Check Your Connection</string>
    <string name="no_app">"No application available for this type of file."</string>
    <string name="video_error">"Error Writing The Video"</string>
    <string name="text_removed">"Text Removed"</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="hidden_s">S</string>
    <string name="hidden_r">R</string>
    <string name="teleprompt_scripts"> Teleprompt Scripts</string>




</resources>
