<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="pn3.teleprompt.Scripts">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <TextView
        android:textSize="@dimen/head_text_size"
        android:nextFocusDown="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/select_script_description"
        android:text="@string/select_script"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:contentDescription="@string/recycler_script_description"
        android:nextFocusDown="@+id/fab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:visibility="gone"
        android:contentDescription="@string/no_script"
        android:text=""/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/fab_menu_description"
        app:fab_addButtonColorNormal="@color/colorAccent"
        tools:context="pn3.teleprompt.Scripts"
        >
        <com.getbase.floatingactionbutton.FloatingActionButton

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/newScript"
            android:contentDescription="@string/new_description"
            tools:context="pn3.teleprompt.Scripts"
            app:fab_icon="@drawable/ic_note_add_white_48dp"

            />
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/drive"
            android:nextFocusDown="@+id/newScript"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:fab_icon="@drawable/ic_cloud_download_white_48dp"
            android:contentDescription="@string/new_drive_description"
            />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</FrameLayout>
