<FrameLayout
    android:id="@+id/container"
    android:nextFocusDown="@+id/video_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="match_parent">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="pn3.teleprompt.New">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/big_text"
        android:layout_margin="@dimen/basic_margin"
        android:text="@string/q_begin" />

    <android.support.v7.widget.CardView
        android:id="@+id/video_card"
        android:nextFocusDown="@+id/text_card"
        android:layout_width="match_parent"
        android:contentDescription="@string/start_vid_description"
        android:layout_margin="@dimen/basic_margin"
        android:layout_height="@dimen/card_size">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/inner_margin"
            android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/card_image_size"
            android:src="@drawable/video"
            android:layout_gravity="center_vertical"
            android:layout_height="@dimen/card_image_size" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/basic_margin"
            android:textSize="@dimen/big_text"
            android:layout_height="wrap_content"
            android:text="@string/video"
            />

            <TextView
                android:layout_width="match_parent"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="@dimen/basic_margin"
                android:layout_height="wrap_content"
                android:text="@string/vid_intro"
                />

        </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/text_card"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/basic_margin"
        android:contentDescription="@string/start_text_description"
        android:layout_height="@dimen/card_size">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/inner_margin"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/card_image_size"
                android:src="@drawable/text"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/card_image_size" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/basic_margin"
                    android:textSize="@dimen/big_text"
                    android:layout_height="wrap_content"
                    android:text="@string/text"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_size"
                    android:layout_marginStart="@dimen/basic_margin"
                    android:layout_gravity="bottom"
                    android:layout_height="wrap_content"
                    android:text="@string/text_intro"
                    />

            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/empty_view"/>

</LinearLayout>
</ScrollView>
</FrameLayout>