<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nextFocusDown="@+id/record"
    android:background="#0099cc"
    android:id="@+id/vid_layout"
    tools:context="pn3.teleprompt.Video">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.flurgle.camerakit.CameraView
            android:id="@+id/camera"
            android:contentDescription="@string/camera_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <View
            android:layout_width="@dimen/container_size"
            android:background="@color/container_color"
            android:layout_height="match_parent"/>
        <ScrollView
            android:id="@+id/scroll_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/data"
            android:layout_width="@dimen/container_size"
            android:textColor="@color/white"
            android:contentDescription="@string/data_description"
            android:text=""
            android:textSize="@dimen/main_text_size"
            android:layout_height="wrap_content" />
        </ScrollView>
    </FrameLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <Button
            android:layout_width="@dimen/record_size"
            android:layout_height="@dimen/record_size"
            android:layout_marginBottom="@dimen/basic_margin"
            android:textColor="#00000000"
            android:text="R"
            android:contentDescription="@string/record_description"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@drawable/round_button"
            android:id="@+id/record"/>

    </FrameLayout>

</FrameLayout>
